# swarmline

./: .gitignore  .pipeline.yaml  404.html  AGENTS.md  AGENTS.public.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAEMON-PLAN.md  LICENSE  MANIFEST.in  README.md  RULES.md  SECURITY.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
.memory-bank/: BACKLOG.md  RESEARCH.md  STATUS.md  checklist.md  lessons.md  plan.md  progress.md  roadmap.md  traceability.md
.memory-bank/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  STACK.md  god-nodes.md
.memory-bank/notes/: 2026-03-17_ADR-001_openai-agents-sdk.md  2026-03-17_research_cli-runtime-and-scheduler.md  2026-03-18_14-43_cli-taskqueue-p1-fixes.md  2026-03-18_15-20_cli-runtime-taskqueue-review-fixes.md  2026-03-18_16-40_wave1_runtime-contract-hardening.md  2026-03-18_17-10_2026-03-18review-findings-followup.md  2026-03-18_17-15_rereview-findings-followup.md  2026-03-18_17-25_wave2_low-risk-slices.md  2026-03-18_19-20_rereview-open-findings.md  2026-03-18_20-00_plan-v1-release-pipeline.md  2026-03-18_21-00_gitflow-two-remotes.md  2026-03-18_21-15_reaudit-remediation-complete.md  2026-03-18_23-10_examples-smoke-coverage.md  2026-03-18_23-34_live-examples-remediation.md  2026-03-18_23-40_docs-examples-consistency-remediation.md  2026-03-18_23-55_unified-release-risk-remediation-complete.md  2026-03-18_23-58_examples-smoke-audit.md  2026-03-18_23-58_live-runtime-release-verification.md  2026-03-18_23-59_follow-up-hardening-pass.md  2026-03-18_phase6_dx_foundation.md  2026-03-18_phase7_production_safety.md  2026-03-18_phase8_persistence_ui.md  2026-03-18_research_paperclip-nanoclaw-rtk.md  2026-03-19_00-54_openrouter-live-examples-runtime-followup.md  2026-03-19_01-35_credentials-provider-docs.md  2026-03-19_02-25_docs-site-steel-visual-pass.md  2026-03-30_12-00_plan-p1-p2-audit-gaps.md  2026-04-25_roadmap-vs-plan-md-decision.md  2026-04-25_ty-strict-decisions.md  2026-04-27_00-57_post-v150-mb-actualize-and-review.md  2026-04-27_01-28_post-v150-roadmap-overview.md  2026-04-27_23-15_p0-pack-closure-session-recovery.md
.memory-bank/plans/: 2025-03-29_feature_openai-agents-runtime.md  2026-03-17_feature_deepagents-upstream-middleware.md  2026-03-17_masterplan_v1.md  2026-03-18_feature_doc-phase9-10a.md  2026-03-18_feature_v1-release-pipeline.md  2026-03-18_fix_library-audit-remediation.md  2026-03-18_fix_reaudit-remediation-backlog.md  2026-03-18_masterplan_v2.md  2026-03-18_masterplan_v3.md  2026-03-18_unified-release-risk-remediation-backlog.md  2026-03-29_feature_code-agent-integration.md  2026-03-29_masterplan_v4.md  2026-03-30_bugfix_p1-p2-audit-gaps.md  2026-04-12_feature_thin-coding-agent-profile.md  (+7 more)
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
advanced/: index.html
agent-facade/: index.html
agent-pack/: index.html
api/: index.html
api-reference/: index.html
architecture/: index.html
authority-system/: index.html
benchmarks/: __init__.py  bench_context.py  bench_memory.py
capabilities/: index.html
claude-code-integration/: index.html
cli/: index.html
cli-runtime/: index.html
code-pipeline/: index.html
codex-integration/: index.html
configuration/: index.html
cookbook/: index.html
credentials/: index.html
deprecated-cognitia/: README.md  pyproject.toml
deprecated-cognitia/src/cognitia/: __init__.py
design-patterns/: index.html
docs/: advanced.md  agent-facade.md  agent-pack.md  api-reference.md  architecture.md  authority-system.md  capabilities.md  claude-code-integration.md  cli-runtime.md  cli.md  code-pipeline.md  codex-integration.md  configuration.md  cookbook.md  credentials.md  design-patterns.md  evaluation.md  examples.md  foundation-filters.md  getting-started.md  graph-agents.md  hitl.md  host-adapter.md  index.md  knowledge-bank.md  lifecycle-modes.md  mcp-server.md  memory-bank.md  memory.md  migration-guide.md  multi-agent.md  multimodal.md  observability.md  orchestration.md  parallel-agents.md  persistent-graph.md  pipeline.md  production-safety.md  rag.md  releasing.md  (+11 more)
evaluation/: index.html
examples/: 00_hello_world.py  01_agent_basics.py  02_tool_decorator.py  03_guardrails.py  03_structured_output.py  04_cost_budget.py  04_middleware_chain.py  05_hooks.py  05_retry_fallback.py  06_input_filters.py  07_guardrails.py  08_rag.py  09_memory_providers.py  10_sessions.py  11_cost_budget.py  12_retry_fallback.py  13_cancellation.py  14_thinking_tool.py  15_event_bus_tracing.py  16_ui_projection.py  17_runtime_switching.py  18_custom_runtime.py  19_cli_runtime.py  20_workflow_graph.py  21_agent_as_tool.py  22_task_queue.py  23_agent_registry.py  24_deep_research.py  25_shopping_agent.py  26_code_project_team.py  27_nano_claw.py  28_opentelemetry_tracing.py  29_structured_output_pydantic.py  30_a2a_agent.py  32_agent_evaluation.py  33_eval_comparison.py  README.md  index.html
foundation-filters/: index.html
getting-started/: index.html
graph-agents/: index.html
hitl/: index.html
host-adapter/: index.html
knowledge-bank/: index.html
lifecycle-modes/: index.html
mcp-server/: index.html
memory/: index.html
memory-bank/: index.html
migration-guide/: index.html
multi-agent/: index.html
multimodal/: index.html
observability/: index.html
orchestration/: index.html
overrides/: main.html
parallel-agents/: index.html
persistent-graph/: index.html
pipeline/: index.html
production-safety/: index.html
rag/: index.html
releasing/: index.html
runtime-registry/: index.html
runtimes/: index.html
scripts/: sync-public.sh
search/: search_index.json
sessions/: index.html
structured-output/: index.html
tests/: _stubs.py  conftest.py
tools-and-skills/: index.html
ui-projection/: index.html
use-cases/: index.html
web-tools/: index.html
why-swarmline/: index.html
(+1169 files in other folders)
