[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitia"
version = "0.2.0"
description = "Переиспользуемая библиотека для построения AI-агентов на Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Runtime: Claude Agent SDK
claude = [
    "claude-agent-sdk>=0.1.33",
]
# Runtime: ThinRuntime (наша реализация)
thin = [
    "anthropic>=0.40",
    "httpx>=0.27",
]
# Runtime: DeepAgents (LangChain/LangGraph)
deepagents = [
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
]
# Database: PostgreSQL
postgres = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
]
# Database: SQLite
sqlite = [
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
]
# Web tools (fetch/search) — base
web = [
    "httpx>=0.27",
]
# Web search: DuckDuckGo (default, без API key). Метапоиск по 9 движкам.
web-duckduckgo = [
    "ddgs>=9.0",
]
# Web search: Tavily (AI-оптимизированный, требует TAVILY_API_KEY)
web-tavily = [
    "tavily-python",
]
# Web fetch: Jina Reader API (URL → markdown, требует JINA_API_KEY)
web-jina = [
    "httpx>=0.27",
]
# Web fetch: Crawl4AI (URL → markdown, Playwright)
web-crawl4ai = [
    "crawl4ai>=0.8",
]
# Web fetch: trafilatura (качественное извлечение текста из HTML)
web-extract = [
    "trafilatura>=2.0",
]
# Sandbox: E2B cloud
e2b = [
    "e2b>=1.0",
]
# Sandbox: Docker
docker = [
    "docker>=7.0",
]
# Всё вместе (для разработки Freedom)
all = [
    "cognitia[claude,thin,postgres,web,web-duckduckgo]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cognitia"]

[tool.hatch.build.targets.wheel.force-include]
"src/cognitia/runtime/models.yaml" = "cognitia/runtime/models.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "security: security regression и изоляция провайдеров",
]

# Ruff конфиг — в корневом pyproject.toml (единый для monorepo)
