[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swarmline"
version = "1.4.1"
description = "LLM-agnostic framework for building AI agents with pluggable runtimes, memory, tools, and observability"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "swarmline contributors" },
]
keywords = [
    "ai",
    "agent",
    "llm",
    "claude",
    "openai",
    "langchain",
    "mcp",
    "framework",
    "multi-agent",
    "tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "structlog>=25.1.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.11",
]

[project.urls]
Homepage = "https://github.com/fockus/swarmline"
Documentation = "https://fockus.github.io/swarmline"
Repository = "https://github.com/fockus/swarmline"
Issues = "https://github.com/fockus/swarmline/issues"
Changelog = "https://github.com/fockus/swarmline/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Runtime: Claude Agent SDK
claude = [
    "claude-agent-sdk>=0.1.51",
]
# Runtime: ThinRuntime (lightweight built-in loop)
thin = [
    "anthropic>=0.86",
    "openai>=2.29",
    "google-genai>=1.68",
    "httpx>=0.28",
]
# Provider: OpenAI-compatible (OpenAI, OpenRouter, Ollama, Groq, Together, etc.)
openai-provider = [
    "openai>=2.29",
]
# Provider: Google GenAI (Gemini)
google-provider = [
    "google-genai>=1.68",
]
# All providers (Anthropic + OpenAI-compat + Google)
all-providers = [
    "anthropic>=0.86",
    "openai>=2.29",
    "google-genai>=1.68",
]
# Runtime: DeepAgents (LangChain/LangGraph)
deepagents = [
    "deepagents>=0.4.12",
    "langchain>=1.2.11",
    "langchain-core>=1.2.18",
    "langgraph>=1.1.1,<1.2.0",
    "langchain-anthropic>=1.3.4",
]
# Runtime: OpenAI Agents SDK (Codex + OpenAI models)
openai-agents = [
    "openai-agents>=0.1,<1.0",
    "openai>=2.29",
]
# Database: PostgreSQL
postgres = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.45",
]
# Database: SQLite
sqlite = [
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0.45",
]
# Web tools (fetch/search) — base
web = [
    "httpx>=0.27",
]
# Web search: DuckDuckGo (default, no API key needed)
web-duckduckgo = [
    "ddgs>=9.0",
]
# Web search: Tavily (AI-optimized, requires TAVILY_API_KEY)
web-tavily = [
    "tavily-python",
]
# Web fetch: Jina Reader API (URL to markdown, requires JINA_API_KEY)
web-jina = [
    "httpx>=0.27",
]
# Web fetch: Crawl4AI (URL to markdown, Playwright)
web-crawl4ai = [
    "crawl4ai>=0.8",
]
# Web fetch: trafilatura (high-quality text extraction from HTML)
web-extract = [
    "trafilatura>=2.0",
]
# Sandbox: E2B cloud
e2b = [
    "e2b>=1.0",
]
# Sandbox: Docker
docker = [
    "docker>=7.0",
]
# Sandbox: NVIDIA OpenShell (kernel-level isolation)
openshell = [
    "openshell>=0.0.16",
]
# OpenTelemetry (tracing export)
otel = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
]
# MCP server (FastMCP STDIO)
mcp = ["fastmcp>=2.0"]
# CLI (click-based)
cli = ["click>=8.1"]
# Code agent meta-extra (MCP + CLI)
code-agent = ["swarmline[mcp,cli]"]
# A2A protocol (Agent-to-Agent)
a2a = [
    "starlette>=0.40",
    "httpx>=0.28",
]
# HTTP serve (swarmline serve)
serve = [
    "starlette>=0.40",
    "uvicorn>=0.30",
]
# Daemon (long-running process manager) — stdlib only, no extra deps
daemon = []
# NATS event bus backend
nats = ["nats-py>=2.0"]
# Redis event bus backend
redis = ["redis>=5.0"]
# All runtimes + all storage + web (for development)
all = [
    "swarmline[claude,thin,deepagents,openai-agents,all-providers,postgres,sqlite,web,web-duckduckgo,otel,mcp,cli,a2a,serve,daemon]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "ty>=0.0.29",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
]

[project.scripts]
swarmline = "swarmline.cli:main"
swarmline-mcp = "swarmline.mcp:main"
swarmline-daemon = "swarmline.daemon.cli_entry:main"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "pyproject.toml",
]
exclude = [
    ".gitignore",
]

[tool.hatch.build.targets.wheel]
packages = ["src/swarmline"]

[tool.hatch.build.targets.wheel.force-include]
"src/swarmline/runtime/models.yaml" = "swarmline/runtime/models.yaml"
"src/swarmline/py.typed" = "swarmline/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-m", "not live"]
markers = [
    "security: security regression and provider isolation",
    "requires_claude_sdk: requires claude-agent-sdk (pip install swarmline[claude])",
    "requires_anthropic: requires anthropic SDK (pip install swarmline[thin])",
    "requires_langchain: requires langchain (pip install swarmline[deepagents])",
    "live: requires network access (web search, API calls)",
    "integration: integration tests with external dependencies",
    "slow: tests that take >5 seconds (e.g. subprocess invocations of ty/ruff)",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["UP007", "UP037", "UP045"]

[tool.ty.environment]
root = ["./src"]

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.src]
include = ["src/swarmline"]

[tool.ty.terminal]
error-on-warning = true
