[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitia"
version = "1.5.0"
description = "DEPRECATED: cognitia has been renamed to swarmline. Install swarmline instead."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "swarmline contributors" },
]
keywords = ["deprecated", "swarmline", "cognitia"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "swarmline>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/fockus/swarmline"
Documentation = "https://fockus.github.io/swarmline/"
